k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-tp-service
  namespace: devops-tp
spec:
  selector:
    app: devops-tp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
