k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-tp-ingress
  namespace: devops-tp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: devops-tp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-tp-service
            port:
              number: 80
